Add linking accounts

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -50,6 +50,9 @@
 }
 .auth-container .auth-box .auth-box-left img {
   width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .auth-container .auth-box .auth-box-right {
   width: 50%;
