--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -57,7 +57,8 @@ $secondary-color: rgb(197, 196, 196);
             
             img {
                 width: 100%;
-                // max-height: 100%;
+                height: 100%;
+                object-fit: cover;
             }
         }
         .auth-box-right {
