--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -26,6 +26,56 @@
   outline: none;
 }
 
+.error-message {
+  color: red;
+  font-size: 0.8rem;
+  margin: 0.2rem 0;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+  cursor: pointer;
+  background-color: rgb(164, 164, 232);
+}
+.navbar .nav-items {
+  display: flex;
+  gap: 1rem;
+}
+
+.loading-container {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  display: grid;
+  place-items: center;
+  z-index: 101;
+  background-color: rgba(232, 229, 229, 0.749);
+  transition: all 200ms ease-in-out;
+  opacity: 0;
+  pointer-events: none;
+}
+.loading-container.loading {
+  opacity: 1;
+  pointer-events: all;
+}
+.loading-container .loading-spinner {
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: rotateSpinner 2s linear infinite;
+}
+@keyframes rotateSpinner {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .auth-container {
   display: flex;
   flex-direction: column;
@@ -94,4 +144,18 @@
 .auth-container .auth-box .auth-box-right .redirect-auth span {
   text-decoration: underline;
   cursor: pointer;
+}
+
+.new-post-container {
+  width: 80%;
+  margin: 0 auto;
+  padding: 1rem 0;
+}
+.new-post-container .new-post-content {
+  margin: 1rem 0;
+}
+.new-post-container .new-post-content .title {
+  border: none;
+  outline: none;
+  font-size: 2rem;
 }/*# sourceMappingURL=styles.css.map */
