--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -32,6 +32,60 @@ $secondary-color: rgb(197, 196, 196);
     outline: none;
 }
 
+.error-message {
+    color: red;
+    font-size: 0.8rem;
+    margin: 0.2rem 0;
+}
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem;
+    cursor: pointer;
+    background-color: $primary-color;
+
+    .nav-items {
+        display: flex;
+        gap: 1rem;
+    }
+}
+
+.loading-container {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    display: grid;
+    place-items: center;
+    z-index: 101;
+    background-color: rgba(232, 229, 229, 0.749);
+    transition: all 200ms ease-in-out;
+    opacity: 0;
+    pointer-events: none;
+    
+    &.loading {
+        opacity: 1;
+      pointer-events: all;
+    }
+    
+    .loading-spinner {
+      color: black;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      animation: rotateSpinner 2s linear infinite;
+    }
+    
+    @keyframes rotateSpinner {
+      from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+    }
+}
+
 .auth-container {
     display: flex;
     flex-direction: column;
@@ -106,6 +160,22 @@ $secondary-color: rgb(197, 196, 196);
                     cursor: pointer;
                 }
             }
+        }
+    }
+}
+
+.new-post-container {
+    width: 80%;
+    margin: 0 auto;
+    padding: 1rem 0;
+    
+    .new-post-content{
+        margin: 1rem 0;
+
+        .title {
+            border: none;
+            outline: none;
+            font-size: 2rem;
         }
     }
 }
