--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -164,7 +164,7 @@ $secondary-color: rgb(197, 196, 196);
     }
 }
 
-.new-post-container {
+.post-container {
     width: 80%;
     margin: 0 auto;
     padding: 1rem 0;
