--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -150,6 +150,14 @@
   width: 80%;
   margin: 0 auto;
   padding: 1rem 0;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.story-container .story {
+  padding: 1rem;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 .story-container .new-story-content {
   margin: 1rem 0;
