--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -168,6 +168,15 @@ $secondary-color: rgb(197, 196, 196);
     width: 80%;
     margin: 0 auto;
     padding: 1rem 0;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    
+    .story {
+        padding: 1rem;
+        border-radius: 10px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
     // background-color: pink;
     
     .new-story-content{
