--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -12,6 +12,7 @@ $secondary-color: rgb(197, 196, 196);
 }
 
 .btn {
+    align-self: flex-start;
     border: none;
     cursor: pointer;
     color: white;
@@ -48,6 +49,15 @@ $secondary-color: rgb(197, 196, 196);
     .nav-items {
         display: flex;
         gap: 1rem;
+
+        .nav-item {
+            color: white;
+            text-decoration: none;
+
+            &:hover {
+                color: gray;
+            }
+        }
     }
 }
 
@@ -171,13 +181,31 @@ $secondary-color: rgb(197, 196, 196);
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    margin-top: 1rem;
+
+    .story-header {
+        display: flex;
+        justify-content: space-between;
+
+        .insights {
+            display: flex;
+            gap: 1rem;
+            align-items: center;
+
+            .insight-icon {
+                display: flex;
+                align-items: center;
+            }
+        }
+    }
     
     .story {
+        text-decoration: none;
         padding: 1rem;
         border-radius: 10px;
+        color: black;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
-    // background-color: pink;
     
     .new-story-content{
         margin: 1rem 0;
@@ -186,6 +214,63 @@ $secondary-color: rgb(197, 196, 196);
             border: none;
             outline: none;
             font-size: 2rem;
+            width: 100%;
+        }
+    }
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5); 
+    z-index: 1; 
+
+    .insights-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        position: relative;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        padding: 1rem;
+        z-index: 2;
+        width: 60%;
+        height: 60%;
+        border-radius: 0.3rem;
+        background-color: white;
+
+        .close-btn {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            cursor: pointer;
+        }
+
+        .insight-content {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            flex-grow: 1;
+            padding-top: 1rem;
+
+            .insight-input {
+                flex-grow: 1;
+                width: 100%;
+                resize: none;
+                padding: 10px;
+                margin-top: 10px;
+                outline: none;
+                border: 1px solid $secondary-color;
+            }
+
+            .insight-actions {
+                display: flex;
+                gap: 1rem;
+            }
         }
     }
 }
