--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -153,7 +153,7 @@
   cursor: pointer;
 }
 
-.story-container {
+.page-container {
   width: 80%;
   margin: 0 auto;
   padding: 1rem 0;
@@ -162,34 +162,41 @@
   gap: 1rem;
   margin-top: 1rem;
 }
-.story-container .story-header {
+.page-container .story-header {
   display: flex;
   justify-content: space-between;
 }
-.story-container .story-header .insights {
+.page-container .story-header .insights {
   display: flex;
   gap: 1rem;
   align-items: center;
 }
-.story-container .story-header .insights .insight-icon {
+.page-container .story-header .insights .insight-icon {
   display: flex;
   align-items: center;
 }
-.story-container .story {
+.page-container .story {
   text-decoration: none;
   padding: 1rem;
   border-radius: 10px;
   color: black;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-.story-container .new-story-content {
+.page-container .new-story-content {
   margin: 1rem 0;
 }
-.story-container .new-story-content .title {
+.page-container .new-story-content .title {
   border: none;
   outline: none;
   font-size: 2rem;
   width: 100%;
+}
+.page-container .insights-section .insights-header {
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+.page-container .insights-section .insight {
+  margin: 1rem 0;
 }
 
 .overlay {
