--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -187,6 +187,10 @@ $secondary-color: rgb(197, 196, 196);
         display: flex;
         justify-content: space-between;
 
+        .story-left {
+            gap: 1rem;
+        }
+
         .insights {
             display: flex;
             gap: 1rem;
@@ -244,6 +248,13 @@ $secondary-color: rgb(197, 196, 196);
     background-color: rgba(0, 0, 0, 0.5); 
     z-index: 1; 
 
+    .close-btn {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        cursor: pointer;
+    }
+
     .insights-container {
         display: flex;
         flex-direction: column;
@@ -259,12 +270,6 @@ $secondary-color: rgb(197, 196, 196);
         border-radius: 0.3rem;
         background-color: white;
 
-        .close-btn {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            cursor: pointer;
-        }
 
         .insight-content {
             display: flex;
@@ -287,6 +292,28 @@ $secondary-color: rgb(197, 196, 196);
                 display: flex;
                 gap: 1rem;
             }
+        }
+    }
+    .confirm-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 1rem;
+        padding: 1rem;
+        background-color: white;
+        border-radius: 0.3rem;
+        position: relative;
+        top: 50%;
+        left: 50%;
+        width: 30%;
+        height: 30%;
+        transform: translate(-50%, -50%);
+        z-index: 2;
+        
+        .actions {
+            display: flex;
+            gap: 1rem;
+            justify-content: center;
         }
     }
 }
