--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,7 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Jost", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
 }
@@ -10,14 +12,15 @@
   align-self: flex-start;
   border: none;
   cursor: pointer;
-  color: white;
+  color: #fff;
   border: 1px solid rgb(164, 164, 232);
-  border-radius: 5px;
-  padding: 0.4rem 0.6rem;
+  font-size: 1rem;
+  letter-spacing: 1px;
+  padding: 0.4rem 0.8rem;
   background-color: rgb(164, 164, 232);
 }
 .btn:hover {
-  background-color: rgb(123, 123, 207);
+  background-color: #6262A6;
 }
 
 .input {
@@ -35,21 +38,92 @@
 
 .navbar {
   display: flex;
+  align-items: center;
   justify-content: space-between;
-  padding: 1rem 2rem;
   cursor: pointer;
+  padding: 0 1rem;
   background-color: rgb(164, 164, 232);
 }
-.navbar .nav-items {
+.navbar .logo-holder {
   display: flex;
-  gap: 1rem;
+  align-items: center;
+}
+.navbar .logo-holder img {
+  max-width: 100%;
+  height: 40px;
+}
+.navbar .nav-items {
+  padding: 1rem 0;
+  display: flex;
+  gap: 2rem;
 }
 .navbar .nav-items .nav-item {
-  color: white;
+  color: #fff;
   text-decoration: none;
 }
 .navbar .nav-items .nav-item:hover {
   color: gray;
+}
+
+.home .carousel {
+  max-width: 100%;
+}
+.home .carousel .carousel-item {
+  position: relative;
+  transition: all 200ms ease-in-out;
+}
+.home .carousel .carousel-item .img-holder {
+  height: 500px;
+}
+.home .carousel .carousel-item .img-holder img {
+  width: 100%;
+  height: 100%;
+  filter: brightness(50%);
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.home .carousel .carousel-item .carousel-item-content {
+  display: flex;
+  flex-direction: column;
+  margin-left: 1rem;
+  position: absolute;
+  top: 30%;
+  color: white;
+  padding: 0.5rem;
+  width: 50%;
+  gap: 1rem;
+}
+.home .carousel .carousel-item .carousel-item-content .desc {
+  font-size: 3rem;
+  font-weight: 600;
+}
+.home .carousel .carousel-item .carousel-item-content .auth {
+  display: flex;
+  gap: 1rem;
+}
+.home .carousel .carousel-item .indicators {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  transition: all 200ms ease-in-out;
+}
+.home .carousel .carousel-item .indicators .indicator {
+  width: 30px;
+  height: 5px;
+  cursor: pointer;
+  border-radius: 10px;
+  background: rgb(181, 181, 181);
+}
+.home .carousel .carousel-item .indicators .indicator:hover {
+  box-shadow: 0 0 0.3rem white;
+}
+.home .carousel .carousel-item .indicators .indicator.active {
+  background: white;
+  box-shadow: 0 0 0.3rem white;
 }
 
 .loading-container {
