--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -1,24 +1,31 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 $primary-color: rgb(164, 164, 232);
-$primary-color-hover: rgb(123, 123, 207);
+// $primary-color-hover: rgb(123, 123, 207);
+$primary-color-hover: #6262A6;
 $secondary-color: rgb(197, 196, 196);
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    // font-family: "Nunito", sans-serif;
+    font-family: "Jost", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
+    // background-color: #f9f9f9;
 }
 
 .btn {
     align-self: flex-start;
     border: none;
     cursor: pointer;
-    color: white;
+    color: #fff;
     border: 1px solid $primary-color;
-    border-radius: 5px;
-    padding: 0.4rem 0.6rem;
+    // border-radius: 5px;
+    // padding: 0.4rem 0.6rem;
+    font-size: 1rem;
+    letter-spacing: 1px;
+    padding: 0.4rem 0.8rem;
     background-color: $primary-color;
 
     &:hover {
@@ -41,17 +48,29 @@ $secondary-color: rgb(197, 196, 196);
 
 .navbar {
     display: flex;
+    align-items: center;
     justify-content: space-between;
-    padding: 1rem 2rem;
     cursor: pointer;
+    padding: 0 1rem;
     background-color: $primary-color;
-
-    .nav-items {
+    
+    .logo-holder {
         display: flex;
-        gap: 1rem;
+        align-items: center;
+        
+        img{
+            max-width: 100%;
+            height: 40px;
+        }
+    }
+    
+    .nav-items {
+        padding: 1rem 0;
+        display: flex;
+        gap: 2rem;
 
         .nav-item {
-            color: white;
+            color: #fff;
             text-decoration: none;
 
             &:hover {
@@ -60,6 +79,79 @@ $secondary-color: rgb(197, 196, 196);
         }
     }
 }
+
+.home {
+    .carousel {
+        max-width: 100%;
+
+        .carousel-item {
+            position: relative;
+            transition: all 200ms ease-in-out;
+
+            .img-holder {
+                height: 500px;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    filter: brightness(50%);
+                    object-fit: cover;
+                }
+            }
+
+            .carousel-item-content {
+                display: flex;
+                flex-direction: column;
+                margin-left: 1rem;
+                position: absolute; 
+                top: 30%;
+                // background-color: rgba(0, 0, 0, 0.5);
+                color: white;
+                padding: 0.5rem;
+                width: 50%;
+                gap: 1rem;
+
+                .desc {
+                    font-size: 3rem;
+                    font-weight: 600;
+                }
+                .auth {
+                    display: flex;
+                    gap: 1rem;
+                }
+            }
+
+            .indicators {
+                display: flex;
+                justify-content: center;
+                gap: 1rem;
+                position: absolute;
+                bottom: 10px;
+                left: 50%;
+                transform: translateX(-50%);
+                transition: all 200ms ease-in-out;
+
+                .indicator {
+                    width: 30px;
+                    height: 5px;
+                    cursor: pointer;
+                    border-radius: 10px;
+                    background: rgb(181, 181, 181);
+
+                    &:hover {
+                        box-shadow: 0 0 0.3rem white;
+                    }
+
+                    &.active {
+                        background: white;
+                        box-shadow: 0 0 0.3rem white;
+                      }
+                }
+            }
+        }
+    }
+}
+
 
 .loading-container {
     width: 100%;
