--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -8,6 +8,15 @@
   font-style: normal;
 }
 
+.app-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+.app-container .main-content {
+  flex: 1;
+}
+
 .btn {
   align-self: flex-start;
   border: none;
@@ -42,6 +51,11 @@
   justify-content: space-between;
   cursor: pointer;
   padding: 0 1rem;
+  top: 0;
+  position: sticky;
+  z-index: 100;
+  background: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-bottom: 1px solid #f0f0f0;
 }
 .navbar .logo-holder {
@@ -58,6 +72,7 @@
   gap: 2rem;
 }
 .navbar .nav-items .nav-item {
+  color: #000;
   text-decoration: none;
 }
 .navbar .nav-items .nav-item:hover {
@@ -158,70 +173,87 @@
 }
 
 .auth-container {
+  background-image: url("../images/plc.jpg");
+  min-height: 600px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
-  gap: 1rem;
-}
-.auth-container .title {
-  font-size: 3rem;
-}
-.auth-container .auth-box {
-  display: flex;
-  width: 60vw;
-  justify-content: center;
-  align-items: center;
-  padding: 1rem;
+  justify-content: flex-end;
+  padding: 2rem;
   background-color: pink;
 }
-.auth-container .auth-box .auth-box-left {
-  width: 50%;
-}
-.auth-container .auth-box .auth-box-left img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-.auth-container .auth-box .auth-box-right {
-  width: 50%;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  gap: 1rem;
-  background-color: white;
+.auth-container .form {
   padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  width: 50%;
+  max-width: 800px;
+  background-color: #fff;
 }
-.auth-container .auth-box .auth-box-right .reg-title {
+.auth-container .form .reg-title {
   font-size: 2rem;
   font-weight: 600;
   letter-spacing: 1px;
 }
-.auth-container .auth-box .auth-box-right .error-message {
+.auth-container .form .error-message {
   color: red;
   font-size: 0.8rem;
 }
-.auth-container .auth-box .auth-box-right .auth-input {
+.auth-container .form .auth-input {
   width: 100%;
 }
-.auth-container .auth-box .auth-box-right .phoneNo-cont {
+.auth-container .form .phoneNo-cont {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 0.4rem;
   width: 100%;
 }
-.auth-container .auth-box .auth-box-right .register {
+.auth-container .form .phoneNo-cont .phone-input {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.auth-container .form .phoneNo-cont .phone-input .send-otp {
+  width: 20%;
+  text-align: center;
+}
+.auth-container .form .phoneNo-cont .phone-verify {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin-top: 1rem;
+}
+.auth-container .form .phoneNo-cont .phone-verify .recaptcha {
+  width: 50%;
+}
+.auth-container .form .phoneNo-cont .phone-verify .otp-cont {
+  display: flex;
+  flex-direction: column;
+  gap: 0.4rem;
+  width: 50%;
+}
+.auth-container .form .phoneNo-cont .phone-verify .otp-cont .btn {
+  text-align: center;
+  width: 100%;
+}
+.auth-container .form .register {
   font-size: 1rem;
   padding: 0.8rem 1.5rem;
 }
-.auth-container .auth-box .auth-box-right .redirect-auth {
+.auth-container .form .redirect-auth {
   width: 100%;
   display: flex;
   align-items: flex-start;
 }
-.auth-container .auth-box .auth-box-right .redirect-auth span {
+.auth-container .form .redirect-auth span {
   text-decoration: underline;
   cursor: pointer;
 }
@@ -356,7 +388,6 @@
 }
 
 footer {
-  position: fixed;
   bottom: 0;
   width: 100%;
   padding: 1rem 0;
