--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -4,6 +4,7 @@ $primary-color: rgb(164, 164, 232);
 // $primary-color-hover: rgb(123, 123, 207);
 $primary-color-hover: #6262A6;
 $secondary-color: rgb(197, 196, 196);
+// #BBBBBB
 
 *{
     margin: 0;
@@ -14,6 +15,17 @@ $secondary-color: rgb(197, 196, 196);
     font-style: normal;
     // background-color: #f9f9f9;
 }
+
+.app-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    
+    .main-content {
+        flex: 1;
+    }
+}
+
 
 .btn {
     align-self: flex-start;
@@ -52,6 +64,11 @@ $secondary-color: rgb(197, 196, 196);
     justify-content: space-between;
     cursor: pointer;
     padding: 0 1rem;
+    top: 0;
+    position: sticky;
+    z-index: 100;
+    background: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-bottom: 1px solid #f0f0f0;
     // background-color: $primary-color;
     
@@ -69,8 +86,9 @@ $secondary-color: rgb(197, 196, 196);
         padding: 1rem 0;
         display: flex;
         gap: 2rem;
-
+        
         .nav-item {
+            color: #000;
             // color: #fff;
             text-decoration: none;
 
@@ -190,78 +208,99 @@ $secondary-color: rgb(197, 196, 196);
 }
 
 .auth-container {
+    background-image: url("../images/plc.jpg");
+    min-height: 600px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
-    // background-color: pink;
-    gap: 1rem;
-
-    .title {
-        font-size: 3rem;
-    }
-
-    .auth-box {
+    justify-content: flex-end;
+    padding: 2rem;
+    background-color: pink;
+    
+    .form {
+        padding: 2rem;
         display: flex;
-        width: 60vw;
-        justify-content: center;
-        align-items: center;
-        padding: 1rem;
-        background-color: pink;
-        
-        .auth-box-left {
-            width: 50%;
-            
-            img {
+        flex-direction: column;
+        gap: 0.5rem;
+        width: 50%;
+        max-width: 800px;
+        background-color: #fff;
+
+        .reg-title {
+            font-size: 2rem;
+            font-weight: 600;
+            letter-spacing: 1px;
+        }
+        .error-message {
+            color: red;
+            font-size: 0.8rem;
+        }
+
+        .auth-input {
+            width: 100%;
+        }
+
+        .phoneNo-cont {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 0.4rem;
+            width: 100%;
+            // background-color: pink;
+
+            .phone-input {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
                 width: 100%;
-                height: 100%;
-                object-fit: cover;
+
+                .send-otp {
+                    width: 20%;
+                    text-align: center;
+                }
+            }
+
+            .phone-verify {
+                display: flex;
+                gap: 1rem;
+                align-items: center;
+                justify-content: center;
+                width: 100%;
+                margin-top: 1rem;
+
+                .recaptcha {
+                    width: 50%;
+                }
+
+                .otp-cont {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 0.4rem;
+                    width: 50%;
+
+                    .btn {
+                        text-align: center;
+                        width: 100%;
+                    }
+                }
             }
         }
-        .auth-box-right {
-            width: 50%;
+
+        .register {
+            font-size: 1rem;
+            padding: 0.8rem 1.5rem;
+        }
+        .redirect-auth {
+            width: 100%;
             display: flex;
-            align-items: center;
-            flex-direction: column;
-            gap: 1rem;
-            background-color: white;
-            padding: 2rem;
+            align-items: flex-start;
 
-            .reg-title {
-                font-size: 2rem;
-                font-weight: 600;
-                letter-spacing: 1px;
-            }
-            .error-message {
-                color: red;
-                font-size: 0.8rem;
-            }
-
-            .auth-input {
-                width: 100%;
-            }
-
-            .phoneNo-cont {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                gap: 0.4rem;
-                width: 100%;
-            }
-
-            .register {
-                font-size: 1rem;
-                padding: 0.8rem 1.5rem;
-            }
-            .redirect-auth {
-                width: 100%;
-                display: flex;
-                align-items: flex-start;
-
-                span {
-                    text-decoration: underline;
-                    cursor: pointer;
-                }
+            span {
+                text-decoration: underline;
+                cursor: pointer;
             }
         }
     }
@@ -416,7 +455,6 @@ $secondary-color: rgb(197, 196, 196);
 }
 
 footer{
-    position: fixed;
     bottom: 0;
     width: 100%;
     padding: 1rem 0;
